<resources>
    <string-array name="names">
        <item>CAR</item>
        <item>CYCLES</item>
        <item>MOBILES</item>
        <item>BIKES</item>
        <item>ELECTRONICITEMS</item>
        <item>TV</item>
        <item>LAPTOP</item>
        <item>FURNITURE</item>
        <item>BOOK</item>
        <item>CLOTHES</item>
        <item>OTHERS</item>
    </string-array>

    <string name="aboutus">About Us</string>
    <string name="slogan">One mans trash is another mans treasure.</string>
    <string name="creators">Creators</string>
    <string name="krishna">KRISHNA JALAN</string>
    <string name="yash">YASH A KABRA</string>
    <string name="anuj">ANUJ PANDEY</string>
    <string name="selectcategory">Please select the category of your item -</string>

    <string name="car">Car</string>
    <string name="bike">Motor bike</string>
    <string name="cycle">Cycle</string>
    <string name="mobile">Mobile</string>
    <string name="eleitem">Electronic item</string>
    <string name="tv">TV</string>
    <string name="laptop">Laptop</string>
    <string name="furniture">Furniture</string>
    <string name="books">Books</string>
    <string name="clothes">Clothes</string>

    <string name="fillthedetails">PLEASE FILL THE DETAILS BELOW-</string>
    <string name="name">Name</string>
    <string name="age">Age of product</string>
    <string name="description">Description</string>
    <string name="adress">Address</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>

    <string name="next">Next</string>

    <string name="addimages">PLEASE ADD IMAGES AND VIDEO HERE-</string>

    <string name="laststep">LAST STEP TO GOO....</string>
    <string name="chooseacategory">Choose a cateogary for exchange -</string>
    <string name="done">Done</string>
    <string name="typesomething">Type something...</string>

    <string name="exchangereq">Exchange Requests</string>
    <string name="feedback">Feedback</string>
    <string name="rateus">Rate us</string>
    <string name="save">Save</string>
    <string name="youmaylike">You may also like</string>
    <string name="reqexchange">Request exchange</string>
    <string name="chat">Chat</string>

    <string name="welcomeback">HELLO THERE, WELCOME BACK !</string>
    <string name="signintocontinue">Sign In to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotpswd">Forget Password ?</string>
    <string name="go">Go</string>
    <string name="newusersignup">New User, Sign up !</string>
    <string name="exchangehistory">Exchange History</string>

    <string name="giverat">GIVE RATINGS</string>
    <string name="giverev">GIVE REVIEWS</string>
    <string name="writehere">Write here</string>

    <string name="welcome">WELCOME !</string>
    <string name="signup">Sign up to start a new journey !</string>
    <string name="confirmpswd">Confirm password</string>
    <string name="alreadyhaveaccount">Already have an account. Login!</string>
    <string name="ngoregister">NGOs register here!</string>
    <string name="number">Phone number</string>
    <string name="orgname">Organization name</string>
    <string name="photonotmatch">Given photo not matching to selected categoty</string>
    <string name="cancel">Cancel</string>
    <string name="addanyway">Add anyway</string>

    <string name="sure">Are you sure ?</string>
    <string name="no">No</string>
    <string name="yes">Yes, go ahead !</string>
    <string name="thankyou">Thank you for your valuable contribution towards society</string>
    <string name="wewillfind">We will soon find someone who needs this !</string>
    <string name="hurray">Hurray!</string>
    <string name="yourreqisacc">Your request has been accepted</string>

    <string name="navigateuser">Navigate to user</string>
    <string name="alreagyexchanged">Already exchanged</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="myprofile">My profile</string>
    <string name="logout">Log out</string>

    <string name="posts">Posts</string>
    <string name="ratings">Ratings</string>
    <string name="wanttoexchange">wants to exchange your,</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="providefeedback">Please provide your valuable feedback</string>
    <string name="msg">Messages</string>

    <string name="app_name">The barter shop</string>
    <string name="categories">Categories</string>
    <string name="ele">Electronics</string>
    <string name="notif">Notifications</string>

    <string name="searchforitems">Search for items here</string>
    <string name="sortby">Sort by -</string>
    <string name="distance">Distance</string>

    <string name="surelogout">Are you sure, you want to log out?</string>
    <string name="app_slogan">Best Exchanges !</string>

    <string name="exchanged">Exchanged</string>
    <string name="showroute">Show route</string>

    <string name="by">By-</string>
    <string name="open">Open</string>

    <string name="rateuser">Rate User</string>

    <string name="history">History</string>
    <string name="myadds">My Adds</string>
    <string name="home">Home</string>
    <string name="savedposts">Saved Posts</string>

    <string name="ourapp">Our App</string>
    <string name="help">Help</string>

    <string name="settings">Settings</string>

    <string name="changelang">Change language</string>

    <string name="english">English</string>
    <string name="hindi">Hindi</string>

    <string name="aboutusdesc">The Barter Shop, provides a platform to its users where they could exchange thier items which might be of less use to them but it might be useful to some other user. It helps them to post their product, to contact with the user through chat,notifies them if their exchange requirement matches,users can navigate to the person easily also users can provide their feedback.Besides these features the app shows the feed based on users search history, also it could be filtered on the basis of distance and rating. This app also has a unique feature of verifying the product alerting the user if the product is not valid.</string>

    <string name="access_token">sk.eyJ1Ijoia3Jpc2huYTEyMTQiLCJhIjoiY2t4N2dnOXA5MGppYTJubzB6eXB0c253diJ9.RaJuqkAkqqquA1lzEwmaKA</string>
    <string name="start_navigation">Start navigation</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
</resources>