<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white_pressed"
    app:cardCornerRadius="7dp"
    app:cardElevation="1dp"
    >
<LinearLayout
    android:layout_width="match_parent"

    android:orientation="vertical"
    android:layout_height="wrap_content">


    <com.airbnb.lottie.LottieAnimationView

        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/animation_view"
        app:lottie_fileName="delete_anim.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:fontFamily="@font/bangers"
        android:textSize="25dp"
        android:text="@string/hurray"
        android:textColor="@color/black"

        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/antic"
android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/yourreqisacc" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:id="@+id/btn_navigate"
        android:text="@string/navigateuser"
        android:textStyle="bold"
        android:background="@drawable/custom_button"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"

        android:id="@+id/btn_already"
        android:layout_marginBottom="20dp"
        android:text="@string/alreagyexchanged"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:background="@drawable/custom_button3"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
</androidx.cardview.widget.CardView>