<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/bar"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            app:strokeColor="@color/grey_light"
            app:strokeWidth="1dp"
            app:cardCornerRadius="3dp">

            <EditText
                android:id="@+id/search_bar2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:textCursorDrawable="@color/black"
                android:background="@android:color/transparent"
                android:fontFamily="@font/antic"
                android:hint="@string/searchforitems"
                android:textColorHint="@color/light_orange"
                android:textSize="19sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sort_search"
        android:layout_below="@+id/bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/bangers"
                android:layout_gravity="center"
                android:text="@string/sortby"
                android:textColor="@color/light_orange"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/check_ratings"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/ratings"
                android:buttonTint="@color/grey_light"
                android:fontFamily="@font/antic"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/check_distance"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:buttonTint="@color/grey_light"
                android:fontFamily="@font/antic"
                android:text="@string/distance"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="0.5dp"
            android:background="@color/grey_light"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_search" />

</RelativeLayout>