<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DiscreteFeatures.Ratings">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giverat"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/antic"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/star_1"
            android:src="@drawable/star_unfilled"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/star_2"
            android:src="@drawable/star_unfilled"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/star_3"
            android:src="@drawable/star_unfilled"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/star_4"
            android:src="@drawable/star_unfilled"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/star_5"
            android:src="@drawable/star_unfilled"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/giverev"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:fontFamily="@font/antic"
        android:gravity="center_horizontal"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/write_your_feedback_here"
        android:id="@+id/tv_review"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        />
    <Button
        android:background="@color/button_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        />

</LinearLayout>