<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        app:strokeColor="@color/grey_light"
        app:strokeWidth="1dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_alert_ml_image"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_ml_predict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_alert_ml_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/photonotmatch"
                android:textAlignment="center"
                android:fontFamily="@font/antic"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_ml_predict"
                    android:textColor="#FF0000"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:background="@drawable/custom_background4"
                    android:text="@string/cancel" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_select_anyway"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_below="@id/tv_ml_predict"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:background="@drawable/custom_background5"
                    android:text="@string/addanyway" />
            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>