<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    tools:context=".NotificationDrawerBottom.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back1"
            android:id="@+id/iv_back"
            android:clickable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="27sp"
            android:gravity="center_horizontal"
            android:fontFamily="@font/bangers"
            android:paddingRight="20dp"
            android:textColor="@color/light_orange"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_lang"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/languages" />

        <TextView
            android:id="@+id/tv_changelang"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_lang"
            android:fontFamily="@font/antic"
            android:gravity="center_vertical"
            android:text="@string/changelang"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_arrow_lang"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:src="@drawable/ic__arrow_right" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/arrow" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/logout"
            android:fontFamily="@font/antic"
            android:gravity="center_vertical"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_arrow_logout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:src="@drawable/ic__arrow_right" />

    </RelativeLayout>

</LinearLayout>